Update Swagger Allow POST testing
